[gd_scene load_steps=16 format=2]

[ext_resource path="res://NPCs/BobTrufaunt/BobTrufaunt.gd" type="Script" id=1]
[ext_resource path="res://spriteSheets/bobTrufaunt-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Onett.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/DialogBox/DialogFrame.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
height = 12.0

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 1, 1.4, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walking"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5, 0.7, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 48, 24 )

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Walking"

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachine" id=9]
states/Idle/node = SubResource( 5 )
states/Idle/position = Vector2( 302, 67.5 )
states/Walking/node = SubResource( 6 )
states/Walking/position = Vector2( 512, 67.25 )
transitions = [ "Idle", "Walking", SubResource( 7 ), "Walking", "Idle", SubResource( 8 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[sub_resource type="DynamicFont" id=11]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="BobTrufaunt" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 16
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Walking = SubResource( 3 )

[node name="InteractionBox_BobT" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionBox_BobT"]
shape = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 9 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 10 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -5.0
margin_top = -35.0
margin_right = 7.0
margin_bottom = -25.0
color = Color( 0.203922, 0.203922, 0.203922, 0.619608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 2.0
margin_top = -3.0
margin_right = 10.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 11 )
text = "b"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true

[node name="DialogFrame" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( -72, -112 )
z_index = 20
